--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
                     <li> <a href="./directories/politics.html">International_political_orders.txt</a> <span>- 9Mb</span></li>
                   </ul>
                 </li>
-                <li><i class="fab fa-html5"></i> sorgente.html <span>- 5.86Mb</span></li>
+                <li><i class="fab fa-html5"></i> <a href="https://github.com/zC40S/edCivica" target="_blank">sorgente.html</a> <span>- 5.86Mb</span></li>
               </ul>
             </li>
             <li><i class="fa fa-folder"></i> Scuola <span>- 300Mb</span></li>
