--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
               <ul>
                 <li><i class="fa fa-folder-open"></i> Italiano <span>- 53Mb</span>
                   <ul>
-                    <li> <a href="./directories/agenda2030.html" target="_blank">Agenda_2030.txt</a><span>- 12Mb</span></li>
+                    <li> <a href="./directories/agenda2030.html">Agenda_2030.txt</a><span>- 12Mb</span></li>
                     <li> <a href="./directories/elettrosmog.html">Elettrosmog.txt</a> <span>- 17Mb</span></li>
                     <li> <a href="./directories/615-ter.html">Accesso_abusivo_a_sistemi_informatici.txt </a><span>- 14Mb</span></li>
                     <li> <a href="./directories/security.html">Sicurezza_sistemi_infromativi.txt</a><span>- 10Mb</span></li>
